--- a/Styles/index.css
+++ b/Styles/index.css
@@ -8,7 +8,7 @@
 
 body{
     height: 100vh;
-    background: url('wallpaper.jpg') no-repeat center;
+    background: url('../Images/wallpaper.jpg') no-repeat center;
     background-size: cover;
     display: flex;
 }
