--- a/Styles/junkIndex.css
+++ b/Styles/junkIndex.css
@@ -16,8 +16,38 @@
     transition: .3s linear;
 }
 
+.logo{
+    width: 30px;
+    height: 30px;
+    border-radius: 50%;
+    margin: auto;
+    background: linear-gradient(130deg, #e66767, #74b9ff);
+    background-size: 200% 200%;
+    animation: gradient 2s linear infinite;
+}
+
+@keyframes gradient{
+    25%{
+        background-position: left bottom;
+    }
+    50%{
+        background-position: right bottom;
+    }
+    75%{
+        background-position: right top;
+    }
+    100%{
+        background-position: left top;
+    }
+}
+
+.sticky{
+    background-color: #ffffff;
+    padding: 18px 0;
+}
+
 .inner-width{
-    max-width: 13000px;
+    max-width: 1300px;
     margin: auto;
     padding: 0 40px;
 }
@@ -26,35 +56,6 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
-}
-
-.logo{
-    padding-left: 60px;
-}
-
-.logo img{
-    width: 50px;
-    height: 50px;
-    border-radius: 50%;
-}
-
-.logo img:hover{
-    animation: logos 1s linear infinite;
-}
-
-@keyframes logos{
-    25%{
-        transform: rotate(90deg);
-    }
-    50%{
-        transform: rotate(180deg);
-    }
-    75%{
-        transform: rotate(270deg);
-    }
-    100%{
-        transform: rotate(360deg);
-    }
 }
 
 .menu-btn{
@@ -71,31 +72,23 @@
 .menu-btn span{
     display: block;
     height: 3px;
-    background-color: #ffffff;
+    background-color: white;
     margin: 6px 0;
     position: relative;
     transition: .3s linear;
-}
-
-.navbar-menu{
-    padding-right: 60px;
 }
 
 .navbar-menu a{
     color: #ffffff;
     font-size: 15px;
     font-weight: 600px;
-    margin-left: 60px;
+    margin-left: 40px;
     transition: .2s linear;
 }
 
+
 .navbar-menu a:hover{
     color: #e66767;
-}
-
-.sticky{
-    background-color: #ffffff;
-    padding: 18px 0;
 }
 
 .sticky .navbar-menu a{
@@ -134,7 +127,6 @@
 #Home .content h1{
     font-size: 60px;
     margin-bottom: 60px;
-    transition: .3s linear;
 }
 
 #Home .content h1::after{
@@ -190,10 +182,6 @@
     }
 }
 
-#Home .content h1:hover{
-    color: #183241;
-}
-
 .social-media a{
     color: #ffffff;
     margin: 0 10px;
@@ -229,8 +217,8 @@
     color: #183241;
 }
 
-/* @media screen and (max-width: 900px){ 
+@media screen and (max-width: 900px){ 
     .menu-btn{
         display: block;
     }
-} */
+}
