Add CV Page and Fix few lines
Fix typos in index.css and index.html
Remove unnecessary line in *.html
Add Navigation Bar for CV
Add Card Header for CV

--- a/Styles/CV.css
+++ b/Styles/CV.css
@@ -1,9 +1,9 @@
 *{
     margin: 0;
     padding: 0;
-    font-family: 'Ubuntu', san-serif;
-    box-sizing: border-box;
+    font-family: 'Ubuntu', sans-serif;
     text-decoration: none;
+    box-sizing: border-box;
 }
 
 .navbar{
@@ -27,7 +27,6 @@
     align-items: center;
     justify-content: space-between;
 }
-
 
 .logo{
     padding-left: 60px;
@@ -104,7 +103,7 @@
     color: #e66767;
 }
 
-#Profiles{
+#CV{
     height: 100vh;
     min-height: 500px;
     background: url('../Images/wallpaper.jpg') no-repeat center;
@@ -112,7 +111,7 @@
     background-attachment: fixed;
 }
 
-#Profiles .inner-width{
+#CV .inner-width{
     display: flex;
     align-items: center;
     justify-content: center;
@@ -120,99 +119,40 @@
     text-align: center;
 }
 
-.profile-card{
-    text-align: center;
-    width: 350px;
-    border-width: 20px;
-    overflow: hidden;
-}
-
-.pictures{
-    display: inline-block;
-    padding: 8px;
-    border-radius: 50%;
-    margin: auto;
-    background: linear-gradient(130deg, #e66767, #74b9ff);
+#CV .pictures{
+    background: linear-gradient(130deg, #74b9ff, #e66767);
     background-size: 200% 200%;
+    padding: 10px;
+    border-radius: 50%;
     animation: gradient 2s linear infinite;
 }
 
-@keyframes gradient{
-    25%{
-        background-position: left bottom;
-    }
-    50%{
-        background-position: right bottom;
-    }
-    75%{
-        background-position: right top;
-    }
-    100%{
-        background-position: left top;
-    }
-}
-
-.pictures img{
+#CV .pictures img{
     width: 150px;
     height: 150px;
     border-radius: 50%;
-    display: block;
+}
+
+#CV .profile-card{
+    display: flex;
+    align-items: center;
+    background: #183241;
+    padding: 25px;
+    border-radius: 20px;
+}
+
+#CV .profile-card .profile-text{
+    padding: 35px;
 }
 
 .profile-name{
     color: #ffffff;
     font-size: 25px;
     font-weight: 600;
-    margin: 10px 0;
 }
 
-.desc{
-    color:#e66767;
-    font-size: 20px;
-    font-weight: 450;
-}
-
-.social-media{
-    display: flex;
-    justify-content: center;
-    margin: 20px 0;
-}
-
-.social-media a{
-    color:#183241;
-    width: 64px;
-    font-size: 25px;
-    transition: .3s linear;
-}
-
-.social-media a:hover{
-    font-size: 20px;
-}
-
-.contact-me{
-    display: inline-block;
-    padding: 12px 50px;
-    border: 2px solid #e66767;
-    border-radius: 5px;
+.profile-desc{
     color: #e66767;
-    transition: .3s linear;
-}
-
-.contact-me:hover{
-    color: #ffffff;
-    background: #e66767;
-}
-
-.card-header{
-    padding: 40px;
-    border-top-left-radius: 10px;
-    border-top-right-radius: 10px;
-    background: #183241;
-}
-
-.card-footer{
-    padding: 40px;
-    border-bottom-left-radius: 10px;
-    border-bottom-right-radius: 10px;
-    background: #ffffff;
+    font-size: 20px;
+    font-weight: 350;
 }
