--- a/Styles/Navbar.css
+++ b/Styles/Navbar.css
@@ -94,3 +94,47 @@
 .navbar-menu a:hover{
     color: #e66767;
 }
+
+@media screen and (max-width:980px){
+    .menu-btn{
+        display: block;
+    }
+
+    .navbar-menu{
+        position: fixed;
+        height: 100vh;
+        width: 100%;
+        background: #183241;
+        top: 0;
+        right: -100%;
+        max-width: 480px;
+        padding: 80px 50px;
+        border-top-left-radius: 15px;
+        border-bottom-left-radius: 15px;
+        transition: .3s linear;
+    }
+
+    .navbar-menu a{
+        display: block;
+        text-align: center;
+        font-size: 20px;
+        font-weight: 600;
+        margin: 30px 0;
+    }
+
+    .navbar-menu.active{
+        right: 0;
+    }
+
+    .menu-btn.active span:nth-child(1){
+        transform: rotate(-45deg);
+        top: 4px;
+    }
+    .menu-btn.active span:nth-child(2){
+        opacity: 0;
+    }
+    .menu-btn.active span:nth-child(3){
+        transform: rotate(45deg);
+        bottom: 14px;
+    }
+}
