--- a/Styles/Navbar.css
+++ b/Styles/Navbar.css
@@ -1,6 +1,6 @@
 .navbar{
     position: fixed;
-    background-color: transparent;
+    background: transparent;
     width: 100%;
     padding: 30px 0;
     top: 0;
@@ -18,6 +18,10 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
+}
+
+.logo{
+    padding-left: 60px;
 }
 
 .logo span{
@@ -91,7 +95,20 @@
     color: #e66767;
 }
 
+.sticky{
+    background: #183241;
+}
+
+
 @media screen and (max-width:980px){
+    .logo{
+        padding-left: 0;
+    }
+
+    .navbar-menu{
+        padding-right: 0;
+    }
+
     .menu-btn{
         display: block;
     }
