--- a/Styles/CV.css
+++ b/Styles/CV.css
@@ -99,57 +99,16 @@
     font-size: 14px;
 }
 
-/* Experiences */
+@media screen and (max-width:980px){
+    #CV .side-by-side{
+        flex-direction: column;
+    }
 
-.game-dev-exp{
-    border-left: 2px solid #183241;
-}
+    .skill-sections{
+        padding-bottom: 20px;
+    }
 
-.experiences{
-    padding-left: 25px;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    width: 300px;
-    padding-top: 5px;
-    padding-bottom: 5px;
-}
-
-.experiences .year{
-    display: flex;
-}
-
-.year .dots{
-    background: #ffffff;
-    border-radius: 50%;
-    width: 10px;
-    height: 10px;
-    margin-top: 3px;
-    margin-right: 10px;
-}
-
-.year .year-num{
-    font-size: 15px;
-    font-weight: 600;
-    color: #ffffff;
-}
-
-.project-company{
-    font-size: 15px;
-    color: #74b9ff;
-    font-weight: 500;
-}
-
-.project-name{
-    color: #ffffff;
-    font-size: 15px;
-    font-weight: 600;
-    padding-top: 5px;
-}
-
-.project-positions{
-    font-size: 15px;
-    color: #e66767;
-    padding-top: 5px;
-    font-weight: 500;
+    .skill-sections .skill-percent{
+        padding-right: 0px;
+    }
 }
