--- a/Styles/Navbar.css
+++ b/Styles/Navbar.css
@@ -2,7 +2,7 @@
     position: fixed;
     background: transparent;
     width: 100%;
-    padding: 30px 0;
+    padding: 25px 0;
     top: 0;
     z-index: 999;
     transition: .3s linear;
@@ -101,6 +101,10 @@
 
 
 @media screen and (max-width:980px){
+    .navbar{
+        padding: 20px 0;
+    }
+
     .logo{
         padding-left: 0;
     }
