Add new section for background in CV.html

--- a/Styles/CV.css
+++ b/Styles/CV.css
@@ -9,6 +9,9 @@
 #CV{
     height: 100vh;
     min-height: 500px;
+}
+
+#Page{
     background: url('../Images/wallpaper.jpg') no-repeat center;
     background-size: cover;
     background-attachment: fixed;
